Issues, Merge Request show page polished. Fixed +n overflow

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1030,6 +1030,8 @@ p.time {
 }
 
 .project_box .project_descr,
+.merge_request_box .middle_area,
+.issue_box .middle_area,
 .commit_box .commit_message { 
   margin: -20px;
   padding: 20px;
